# pgvector-rx

./: .gitignore  AGENT_PROMPT.md  Cargo.toml  DESIGNDOC.md  README.md  pgvector_rx.control  run_agent.sh
.github/: copilot-instructions.md
.github/workflows/: BuildAndTest.yml  Distribution.yml  ci.yml
src/: hnsw_constants.rs  lib.rs
src/graph/: mod.rs
src/index/: build.rs  handler.rs  insert.rs  mod.rs  options.rs  scan.rs  vacuum.rs
src/types/: bitvec.rs  halfvec.rs  hnsw.rs  mod.rs  sparsevec.rs  vector.rs
src/utils/: mod.rs
tests/: run_tap_tests.sh
tests/pg_regress/expected/: hnsw_vector.out
tests/pg_regress/sql/: setup.sql
tests/t/: 010_hnsw_wal.pl  011_hnsw_vacuum.pl  012_hnsw_vector_build_recall.pl  013_hnsw_vector_insert_recall.pl  014_hnsw_vector_vacuum_recall.pl  015_hnsw_vector_duplicates.pl  016_hnsw_inserts.pl  017_hnsw_filtering.pl  020_hnsw_bit_build_recall.pl  021_hnsw_bit_insert_recall.pl  022_hnsw_bit_vacuum_recall.pl  023_hnsw_bit_duplicates.pl  024_hnsw_halfvec_build_recall.pl  025_hnsw_halfvec_insert_recall.pl  026_hnsw_halfvec_vacuum_recall.pl  027_hnsw_halfvec_duplicates.pl  028_hnsw_sparsevec_build_recall.pl  029_hnsw_sparsevec_insert_recall.pl  030_hnsw_sparsevec_vacuum_recall.pl  031_hnsw_sparsevec_duplicates.pl  038_hnsw_sparsevec_vacuum_insert.pl  039_hnsw_cost.pl  043_hnsw_iterative_scan.pl  044_hnsw_iterative_scan_recall.pl
